[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_03.png" type="Texture" id=1]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_02.png" type="Texture" id=2]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_01.png" type="Texture" id=3]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_00.png" type="Texture" id=4]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_08.png" type="Texture" id=5]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_04.png" type="Texture" id=6]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_09.png" type="Texture" id=7]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_06.png" type="Texture" id=8]
[ext_resource path="res://src/Effects/Textures/strong_lightning_joint.png" type="Texture" id=9]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_05.png" type="Texture" id=10]
[ext_resource path="res://src/Effects/StrongLightning/strong_lightning_07.png" type="Texture" id=11]
[ext_resource path="res://src/Actors/Bosses/Vile/VileLightningBeam.gd" type="Script" id=12]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=13]
[ext_resource path="res://src/Effects/Textures/elec_particles.png" type="Texture" id=14]
[ext_resource path="res://src/Effects/Materials/VileThunderSparkParticles.tres" type="Material" id=15]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 42.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5, 0.5 )

[sub_resource type="CanvasItemMaterial" id=13]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[node name="VileLightning" type="Node2D"]
script = ExtResource( 12 )
frames = [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 7 ) ]

[node name="ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 255 )

[node name="line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 251 )
width = 48.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 4 )
texture_mode = 1

[node name="finish" type="AnimatedSprite" parent="line"]
position = Vector2( 0, 251 )
frames = SubResource( 11 )
frame = 4
playing = true

[node name="end" type="Node2D" parent="."]
position = Vector2( 0, 251 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 13 )
damage = 16.0

[node name="area2D" type="Area2D" parent="DamageOnTouch"]
scale = Vector2( 1, 251 )
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="DamageOnTouch/area2D"]
position = Vector2( 0, 0.5 )
shape = SubResource( 12 )

[node name="finish_particles" type="Particles2D" parent="."]
material = SubResource( 13 )
position = Vector2( 2, 119 )
emitting = false
lifetime = 0.25
one_shot = true
explosiveness = 0.53
local_coords = false
process_material = ExtResource( 15 )
texture = ExtResource( 14 )
